--- a/01. PARTIE LEGISLATIVE/Article L1252-11 - 23085621.md
+++ b/01. PARTIE LEGISLATIVE/Article L1252-11 - 23085621.md
@@ -1,14 +1,20 @@
 # Article L1252-11
 
-Les règles relatives au transport de déchets sont fixées par les dispositions des articles L. 541-7, L. 541-8 et L. 541-44 à
-L. 541-48 du code de l'environnement.
+Les règles relatives au transport de déchets sont fixées par les dispositions des articles L. 541-7, L. 541-8 et L. 541-44,
+L. 541-46 et L. 541-48 du code de l'environnement.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Ordonnance n°2012-34 du 11 janvier 2012 - art. 25
+
 	**Cite**:
 
-	  - Code de l'environnement - art. L541-44 (V)
-	  - Code de l'environnement - art. L541-7 (V)
+	  - Code de l'environnement - art. L541-44
+	  - Code de l'environnement - art. L541-46
+	  - Code de l'environnement - art. L541-48
+	  - Code de l'environnement - art. L541-7
 
 	**Codifié par**:
 
