--- a/01. PARTIE LEGISLATIVE/Article L5334-11 - 23080536.md
+++ b/01. PARTIE LEGISLATIVE/Article L5334-11 - 23080536.md
@@ -16,7 +16,7 @@ attributions mentionnées au premier alinéa de l'article L. 2332-2 du code gén
 l'autorité portuaire est un syndicat mixte, le montant du prélèvement constitue une dépense obligatoire. 
 
 La somme correspondant au prélèvement est consignée entre les mains du comptable public, dans les conditions fixées à
-l'article L. 216-1 du code de l'environnement, jusqu'à l'adoption définitive du plan visé à l'article L. 5334-10 dans le
+l'article L. 171-8 du code de l'environnement, jusqu'à l'adoption définitive du plan visé à l'article L. 5334-10 dans le
 délai fixé par le représentant de l'Etat dans le département. Si le plan n'est pas adopté dans ce délai, la somme est
 définitivement acquise à l'Etat qui se substitue à la collectivité territoriale ou au groupement compétent défaillant pour
 l'élaboration et l'adoption du plan visé à l'article L. 5334-10.
@@ -25,14 +25,14 @@ l'élaboration et l'adoption du plan visé à l'article L. 5334-10.
 
 	**Cite**:
 
-	  - Code général des collectivités territoriales - art. L2332-2
-	  - Code de l'environnement - art. L216-1 (V)
-	  - Code des transports - art. L5334-10 (V)
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. L156-2 (Ab)
+	  - Code général des collectivités territoriales - art. L2332-2 (V)
+	  - Code de l'environnement - art. L171-8
+	  - Code des transports - art. L5334-10
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2012-34 du 11 janvier 2012 - art. 25
