--- a/01. PARTIE LEGISLATIVE/Article L4271-1 - 23083175.md
+++ b/01. PARTIE LEGISLATIVE/Article L4271-1 - 23083175.md
@@ -1,15 +1,19 @@
 # Article L4271-1
 
-Les dispositions de l'article L. 216-1 du code de l'environnement sont applicables en cas de méconnaissance des dispositions
+Les dispositions de l'article L. 171-8 du code de l'environnement sont applicables en cas de méconnaissance des dispositions
 des articles L. 4242-2, L. 4242-3 et L. 4243-1.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Ordonnance n°2012-34 du 11 janvier 2012 - art. 25
+
 	**Cite**:
 
-	  - Code de l'environnement - art. L216-1 (V)
-	  - Code des transports - art. L4242-2 (V)
-	  - Code des transports - art. L4243-1 (V)
+	  - Code de l'environnement - art. L171-8
+	  - Code des transports - art. L4242-2
+	  - Code des transports - art. L4243-1
 
 	**Codifié par**:
 
