--- a/01. PARTIE LEGISLATIVE/Article L3221-2 - 23083811.md
+++ b/01. PARTIE LEGISLATIVE/Article L3221-2 - 23083811.md
@@ -9,19 +9,22 @@ Toute opération de transport public routier de marchandises est rémunérée su
 3° De la durée nécessaire pour la réalisation du transport dans les conditions compatibles avec le respect des
 réglementations de sécurité, telles qu'elles résultent notamment de l'article L. 1611-1 ; 
 
-4° Des charges de carburant nécessaires à la réalisation de l'opération de transport ; 
-
-5° Des charges acquittées au titre des taxes prévues aux articles 269 à 283 quater et 285 septies du code des douanes pour
-l'usage des voies du réseau routier taxable par les véhicules de transport de marchandises. 
+4° Des charges de carburant nécessaires à la réalisation de l'opération de transport. 
 
 Les modalités d'application du présent article, lorsqu'une opération de transport implique plusieurs opérations successives
 de chargement ou de déchargement, sont précisées par décret en Conseil d'Etat.
 
+**Nota:**
+
+Loi n° 2013-431 du 28 mai 2013, art. 16 II : Les dispositions du présent article sont applicables à compter de la date fixée
+par l'arrêté prévu à la première phrase du 1 du C du II de l'article 153 de la loi n° 2008-1425 du 27 décembre 2008 de
+finances pour 2009. Cette date a été fixée au 1er janvier 2014 par l'arrêté du 2 octobre 2013.
+
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°95-96 du 1 février 1995 - art. 24 (Ab), alinéas 1 à 7, paragraphe I
+	  - Loi n°2013-431 du 28 mai 2013 - art. 16 (V)
 
 	**Cité par**:
 
@@ -39,9 +42,7 @@ de chargement ou de déchargement, sont précisées par décret en Conseil d'Eta
 
 	**Cite**:
 
-	  - Code des douanes - art. 269 (VD)
-	  - Code des douanes - art. 285 septies (VT)
-	  - Code des transports - art. L1611-1 (V)
+	  - Code des transports - art. L1611-1
 
 	**Codifié par**:
 
