--- a/01. PARTIE LEGISLATIVE/Article L3242-3 - 23083734.md
+++ b/01. PARTIE LEGISLATIVE/Article L3242-3 - 23083734.md
@@ -1,13 +1,19 @@
 # Article L3242-3
 
 Est punie d'une amende de 15 000 € la méconnaissance, par le cocontractant du transporteur routier, des obligations résultant
-pour lui de l'application de l'article L. 3222-1, L. 3222-2 et du premier alinéa de l'article L. 3222-3.
+pour lui de l'application des articles L. 3222-1, L. 3222-2 et L. 3222-3.
+
+**Nota:**
+
+Loi n° 2013-431 du 28 mai 2013, art. 16 II : Les dispositions du présent article sont applicables à compter de la date fixée
+par l'arrêté prévu à la première phrase du 1 du C du II de l'article 153 de la loi n° 2008-1425 du 27 décembre 2008 de
+finances pour 2009. Cette date a été fixée au 1er janvier 2014 par l'arrêté du 2 octobre 2013.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°95-96 du 1 février 1995 - art. 24 (Ab), alinéa 9, paragraphe V
+	  - Loi n°2013-431 du 28 mai 2013 - art. 16 (M)
 
 	**Cité par**:
 
@@ -22,8 +28,9 @@ pour lui de l'application de l'article L. 3222-1, L. 3222-2 et du premier aliné
 
 	**Cite**:
 
-	  - Code des transports - art. L3222-1 (V)
-	  - Code des transports - art. L3222-3 (V)
+	  - Code des transports - art. L3222-1
+	  - Code des transports - art. L3222-2
+	  - Code des transports - art. L3222-3
 
 	**Codifié par**:
 
