--- a/01. PARTIE LEGISLATIVE/Article L1214-24 - 23086045.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-24 - 23086045.md
@@ -6,18 +6,21 @@ Les services de l'Etat sont associés à son élaboration.
 
 Les représentants des professions et des usagers des transports, les chambres consulaires et les associations agréées de
 protection de l'environnement mentionnées à l'article L. 141-1 du code de l'environnement sont consultés, à leur demande, sur
-le projet.
+le projet. 
+
+Le plan de déplacements urbains peut être adapté dans les conditions définies à l'article L. 300-6-1 du code de l'urbanisme.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28-3 (Ab), alinéas 1, phrases 1 et 2 et 2
-
-	**Cite**:
-
-	  - Code de l'environnement - art. L141-1 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Ordonnance n°2013-888 du 3 octobre 2013 - art. 6
+
+	**Cite**:
+
+	  - Code de l'urbanisme - art. L300-6-1
+	  - Code de l'environnement - art. L141-1
