--- a/01. PARTIE LEGISLATIVE/Article L6361-13 - 23077975.md
+++ b/01. PARTIE LEGISLATIVE/Article L6361-13 - 23077975.md
@@ -1,20 +1,27 @@
 # Article L6361-13
 
 Les amendes administratives mentionnées à l'article L. 6361-12 ne peuvent excéder, par manquement constaté, un montant de 1
-500 € pour une personne physique et de 20 000 € pour une personne morale. Elles font l'objet d'une décision motivée notifiée
-à la personne concernée. Elles sont recouvrées comme les créances de l'Etat étrangères à l'impôt et au domaine. Elles peuvent
-faire l'objet d'un recours de pleine juridiction. Aucune poursuite ne peut être engagée plus de deux ans après la commission
-des faits constitutifs d'un manquement.
+500 € pour une personne physique et de 20 000 € pour une personne morale. S'agissant des personnes morales, ce montant
+maximal est porté à 40 000 € lorsque le manquement concerne :
+
+1° Les restrictions permanentes ou temporaires d'usage de certains types d'aéronefs en fonction de leurs émissions
+atmosphériques polluantes ou de la classification acoustique ;
+
+2° Les mesures de restriction des vols de nuit.
+
+Ces amendes font l'objet d'une décision motivée notifiée à la personne concernée. Elles sont recouvrées comme les créances de
+l'Etat étrangères à l'impôt et au domaine. Elles peuvent faire l'objet d'un recours de pleine juridiction. Aucune poursuite
+ne peut être engagée plus de deux ans après la commission des faits constitutifs d'un manquement.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code de l'aviation civile - art. L227-4 (Ab), dernier alinéa, amendes
+	  - Loi n°2012-1509 du 29 décembre 2012 - art. 90 (VD)
 
 	**Cite**:
 
-	  - Code des transports - art. L6361-12 (V)
+	  - Code des transports - art. L6361-12
 
 	**Codifié par**:
 
