--- a/01. PARTIE LEGISLATIVE/Article L5552-20 - 23079219.md
+++ b/01. PARTIE LEGISLATIVE/Article L5552-20 - 23079219.md
@@ -1,13 +1,17 @@
 # Article L5552-20
 
-Les pensions concédées sont revalorisées lorsque le salaire forfaitaire est revalorisé.
+Les pensions sont revalorisées dans les conditions fixées à l'article L. 161-23-1 du code de la sécurité sociale.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Code des pensions de retraite des marins frança... - art. L15 (Ab), alinéa 1
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-40 du 20 janvier 2014 - art. 6
+
+	**Cite**:
+
+	  - Code de la sécurité sociale. - art. L161-23-1
