--- a/01. PARTIE LEGISLATIVE/Article L1213-5 - 23086220.md
+++ b/01. PARTIE LEGISLATIVE/Article L1213-5 - 23086220.md
@@ -1,14 +1,19 @@
 # Article L1213-5
 
-Les dispositions propres au schéma régional des infrastructures et des transports de la collectivité territoriale de Corse
-sont énoncées au troisième alinéa de l'article L. 4424-12 du code général des collectivités territoriales.
+Les dispositions propres au schéma régional des infrastructures et des transports et au schéma régional de l'intermodalité de
+la collectivité territoriale de Corse sont énoncées au II de l'article L. 4424-10du code général des collectivités
+territoriales.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code général des collectivités territoriales - art. L4424-12 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 6
+
+	**Cite**:
+
+	  - Code général des collectivités territoriales - art. L4424-10 (V)
