--- a/01. PARTIE LEGISLATIVE/Article L1241-1 - 23085735.md
+++ b/01. PARTIE LEGISLATIVE/Article L1241-1 - 23085735.md
@@ -6,13 +6,14 @@ réserve des pouvoirs dévolus à l'Etat en matière de police de la navigation.
 
 Le syndicat peut y organiser des services de transports à la demande. 
 
-En outre, il y assure les missions et y développe les services mentionnés à l'article L. 1231-8.
+En outre, il y assure les missions et y développe les services mentionnés aux articles L. 1231-1, L. 1231-8 et L. 1231-14 à
+L. 1231-16.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Ordonnance n°59-151 du 7 janvier 1959 - art. 1 (VT), alinéas 4, phrases 1, 5 et 6, et 6, paragraphe II
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Cité par**:
 
@@ -39,14 +40,12 @@ En outre, il y assure les missions et y développe les services mentionnés à l
 	  - Code des transports - art. R1241-16 (V)
 	  - Code général des impôts, CGI. - art. 302 bis ZC (VD)
 
-	**Liens**:
+	**Modifié par**:
 
-	  - RECTIFICATION: Ordonnance n°2010-1307 du 28 octobre 2010, v. init.
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 18
 
 	**Cite**:
 
-	  - Code des transports - art. L1231-8 (VD)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Code des transports - art. L1231-1
+	  - Code des transports - art. L1231-1-14 (T)
+	  - Code des transports - art. L1231-8
