--- a/01. PARTIE LEGISLATIVE/Article L1241-14 - 23085698.md
+++ b/01. PARTIE LEGISLATIVE/Article L1241-14 - 23085698.md
@@ -4,11 +4,16 @@ Les ressources du Syndicat des transports d'Ile-de-France comprennent :
 
 1° Les concours financiers des collectivités territoriales membres du syndicat ; 
 
-2° Le produit du versement destiné aux transports en commun perçu à l'intérieur de la région Ile-de-France et mentionné aux
-articles L. 2531-2 et suivants du code général des collectivités territoriales ; 
+2° Le produit du versement destiné aux transports perçu à l'intérieur de la région Ile-de-France et mentionné aux articles L.
+2531-2 et suivants du code général des collectivités territoriales ; 
 
 3° La part du produit des amendes de police relatives à la circulation routière, dans les conditions définies par l'article
 L. 2334-24 du même code ; 
+
+3° bis Une part, fixée par décret en Conseil d'Etat, dans la limite de la moitié du produit des forfaits de post-
+stationnement prévus à l'article L. 2333-87 dudit code et perçus dans la région d'Ile-de-France. La somme de cette ressource
+et de la ressource perçue en application du 3° du présent article est au moins égale à celle perçue en 2012 par le Syndicat
+des transports d'Ile-de-France en application du même 3° ; 
 
 4° Toutes autres contributions, subventions ou avances qui lui sont apportées par l'Etat, par les collectivités publiques ou
 par tout organisme public ou privé, notamment pour la mise en œuvre de politiques d'aide à l'usage des transports collectifs
@@ -36,24 +41,25 @@ Paris ;
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Ordonnance n°59-151 du 7 janvier 1959 - art. 1-1 (VT)
-	  - Loi n°2010-597 du 3 juin 2010 - art. 10, alinéa 6, dernière phrase, art. 21, dernier alinéa, ecqc le versement au STIF du paragraphe II
-
 	**Cite**:
 
-	  - Loi n°2010-597 du 3 juin 2010 - art. 21 (V)
-	  - Code général des impôts, CGI. - art. 1635 ter A (V)
-	  - Code général des collectivités territoriales - art. L1614-1 (V)
-	  - Code général des collectivités territoriales - art. L2334-24 (V)
-	  - Code général des collectivités territoriales - art. L2531-2 (V)
+	  - Loi n°2010-597 du 3 juin 2010 - art. 21
+	  - Code général des impôts, CGI. - art. 1635 ter A
+	  - Code général des collectivités territoriales - art. L1614-1
+	  - Code général des collectivités territoriales - art. L2333-87
+	  - Code général des collectivités territoriales - art. L2334-24
+	  - Code général des collectivités territoriales - art. L2531-2
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 64
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 19
 
 	**Cité par**:
 
 	  - Code des transports - art. L1241-17 (VD)
 	  - Code des transports - art. L1241-20 (VD)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
