--- a/01. PARTIE LEGISLATIVE/Article L1241-2 - 23085731.md
+++ b/01. PARTIE LEGISLATIVE/Article L1241-2 - 23085731.md
@@ -10,8 +10,9 @@ d'Ile-de-France a, notamment, pour mission de :
 3° Définir les modalités techniques d'exécution ainsi que les conditions générales d'exploitation et de financement des
 services ; 
 
-4° Veiller à la cohérence des programmes d'investissement, sous réserve des compétences reconnues à Réseau ferré de France et
-à la Régie autonome des transports parisiens en sa qualité de gestionnaire de l'infrastructure ; 
+4° Veiller à la cohérence des programmes d'investissement, sous réserve des compétences reconnues à Réseau ferré de France, à
+la Régie autonome des transports parisiens en sa qualité de gestionnaire de l'infrastructure et à l'établissement public
+Société du Grand Paris ; 
 
 5° Arrêter la politique tarifaire de manière à obtenir l'utilisation la meilleure, sur le plan économique et social, du
 système de transports correspondant ; 
@@ -25,9 +26,9 @@ aux articles L. 3111-14 à L. 3111-16.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Ordonnance n°59-151 du 7 janvier 1959 - art. 1 (VT), alinéas 4, phrases 2 à 5, et 5, paragraphe II
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Cité par**:
 
@@ -38,10 +39,10 @@ aux articles L. 3111-14 à L. 3111-16.
 	  - Code des transports - art. L1241-3 (VD)
 	  - Code des transports - art. L2111-3-1 (V)
 
+	**Modifié par**:
+
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 20
+
 	**Cite**:
 
-	  - Code des transports - art. L3111-14 (VD)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Code des transports - art. L3111-14
