--- a/01. PARTIE LEGISLATIVE/Article L1241-4 - 23085727.md
+++ b/01. PARTIE LEGISLATIVE/Article L1241-4 - 23085727.md
@@ -2,7 +2,7 @@
 
 Le Syndicat des transports d'Ile-de-France peut assurer la maîtrise d'ouvrage ou désigner le ou les maîtres d'ouvrage de
 projets d'infrastructures nouvelles destinées au transport public de voyageurs, dans la limite des compétences reconnues à
-l'établissement public Réseau ferré de France. 
+l'établissement public Réseau ferré de France et à l'établissement public Société du Grand Paris.  
 
 Le Syndicat des transports d'Ile-de-France et la Régie autonome des transports parisiens exercent conjointement, dans la
 limite des compétences reconnues à l'établissement public Réseau ferré de France, la maîtrise d'ouvrage des opérations,
@@ -18,6 +18,10 @@ suivi et le contrôle d'ensemble.
 
 **Liens relatifs à cet article**
 
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
 	**Cité par**:
 
 	  - Loi n°2010-597 du 3 juin 2010 - art. 20-2 (V)
@@ -27,12 +31,8 @@ suivi et le contrôle d'ensemble.
 
 	**Modifié par**:
 
-	  - Loi n°2013-431 du 28 mai 2013 - art. 7
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 20
 
 	**Cite**:
 
 	  - Code des transports - art. L2142-3
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
