--- a/01. PARTIE LEGISLATIVE/Article L1811-7 - 23084899.md
+++ b/01. PARTIE LEGISLATIVE/Article L1811-7 - 23084899.md
@@ -1,9 +1,17 @@
 # Article L1811-7
 
-Les dispositions relatives au schéma régional des infrastructures et des transports des régions d'outre-mer sont fixées par
+Pour l'application des sections 1 et 2 du chapitre III du titre Ier du livre II, les régions d'outre-mer mettent en œuvre
 l'article L. 4433-7 du code général des collectivités territoriales.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 6
 
 	**Cite**:
 
@@ -12,7 +20,3 @@ l'article L. 4433-7 du code général des collectivités territoriales.
 	**Cité par**:
 
 	  - Code des transports - art. R1811-1 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
