--- a/01. PARTIE LEGISLATIVE/Article L1821-6 - 23084878.md
+++ b/01. PARTIE LEGISLATIVE/Article L1821-6 - 23084878.md
@@ -1,16 +1,20 @@
 # Article L1821-6
 
-Pour son application à Mayotte, l'article L. 1231-1 est rédigé comme suit : 
+Pour son application à Mayotte, l'article L. 1231-1 est ainsi rédigé :
 
-" Art.L. 1231-1.-A Mayotte, les communes ou leurs groupements sont compétents pour l'organisation des transports urbains de
-personnes. "
+" Art. L. 1231-1. - A Mayotte, les communes ou leurs groupements sont compétents pour l'organisation des transports urbains
+de personnes.
+
+" Responsables, dans le ressort de leurs compétences, de l'organisation de la mobilité urbaine, ces collectivités peuvent
+notamment organiser l'usage partagé de véhicules terrestres à moteur et les modes de déplacement non motorisés prévus à la
+section 4 du chapitre unique du titre III du livre II de la présente partie. "
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°2001-616 du 11 juillet 2001 - art. 36 (Ab)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 52
