--- a/01. PARTIE LEGISLATIVE/Article L3121-2 - 23083929.md
+++ b/01. PARTIE LEGISLATIVE/Article L3121-2 - 23083929.md
@@ -1,7 +1,7 @@
 # Article L3121-2
 
 Le titulaire de l'autorisation de stationnement prévue par l'article L. 3121-1 a la faculté de présenter à titre onéreux un
-successeur à l'autorité administrative qui a délivré celle-ci. 
+successeur à l'autorité administrative  compétente pour délivrer celle-ci. 
 
 Cette faculté est subordonnée à l'exploitation effective et continue de l'autorisation de stationnement pendant une durée de
 cinq ans à compter de sa date de délivrance. 
@@ -18,9 +18,13 @@ constituée dans les conditions de droit commun, après une exploitation effecti
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°95-66 du 20 janvier 1995 - art. 3 (Ab)
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 66
 
 	**Cité par**:
 
@@ -30,8 +34,4 @@ constituée dans les conditions de droit commun, après une exploitation effecti
 
 	**Cite**:
 
-	  - Code des transports - art. L3121-1 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Code des transports - art. L3121-1
