--- a/01. PARTIE LEGISLATIVE/Article L3124-1 - 23083872.md
+++ b/01. PARTIE LEGISLATIVE/Article L3124-1 - 23083872.md
@@ -2,21 +2,21 @@
 
 Lorsque l'autorisation de stationnement n'est pas exploitée de façon effective ou continue, ou en cas de violation grave ou
 répétée par son titulaire du contenu de cette autorisation ou de la réglementation applicable à la profession, l'autorité
-administrative qui l'a délivrée peut donner un avertissement au titulaire de cette autorisation de stationnement ou procéder
-à son retrait temporaire ou définitif.
+administrative    compétente pour la délivrer peut donner un avertissement au titulaire de cette autorisation de
+stationnement ou procéder à son retrait temporaire ou définitif.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°95-66 du 20 janvier 1995 - art. 6 bis (Ab)
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 66
 
 	**Cité par**:
 
 	  - Code des transports - art. R3121-11 (V)
 	  - Code des transports - art. R3121-15 (V)
 	  - Code des transports - art. R3124-1 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
