--- a/01. PARTIE LEGISLATIVE/Article L6733-1 - 27718229.md
+++ b/01. PARTIE LEGISLATIVE/Article L6733-1 - 27718229.md
@@ -1,21 +1,18 @@
 # Article L6733-1
 
-Pour l'application à Saint-Barthélemy de l'article L. 6332-2, les mots : " impartis au maire par l'article L. 2212-2 du code
-général des collectivités territoriales ” sont remplacés par les mots : " impartis au président du conseil territorial par
-l'article LO 6252-8 du code général des collectivités territoriales ”.
+Pour l'application à Saint-Barthélemy de l'article L. 6332-2, les mots : " impartis au maire aux articles L. 2212-2 et L.
+2213-33 du code général des collectivités territoriales ” sont remplacés par les mots : " impartis au président du conseil
+territorial par l'article LO 6252-8 du code général des collectivités territoriales ”.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 20
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 66
 
 	**Cite**:
 
-	  - Code général des collectivités territoriales - art. L2212-2 (V)
-	  - Code général des collectivités territoriales - art. LO6252-8 (V)
-	  - Code des transports - art. L6332-2 (V)
-
-	**Anciens textes**:
-
-	  - Code des transports - art. L6732-1 (T)
+	  - Code général des collectivités territoriales - art. L2212-2
+	  - Code général des collectivités territoriales - art. L2213-33
+	  - Code général des collectivités territoriales - art. LO6252-8
+	  - Code des transports - art. L6332-2
