--- a/01. PARTIE LEGISLATIVE/Article L1214-7 - 23086168.md
+++ b/01. PARTIE LEGISLATIVE/Article L1214-7 - 23086168.md
@@ -1,24 +1,24 @@
 # Article L1214-7
 
-Le plan de déplacements urbains est compatible avec les orientations des schémas de cohérence territoriale, des schémas de
-secteur et des directives territoriales d'aménagement prévus aux titres Ier et II du livre Ier du code de l'urbanisme, avec
-le plan régional pour la qualité de l'air prévu par l'article L. 222-1 du code de l'environnement et, à compter de son
-adoption, avec le schéma régional du climat, de l'air et de l'énergie prévu par l'article L. 222-1 du code de
-l'environnement. 
+Le plan de déplacements urbains est compatible avec le schéma régional de l'intermodalité et avec les orientations des
+schémas de cohérence territoriale, des schémas de secteur et des directives territoriales d'aménagement prévus aux titres Ier
+et II du livre Ier du code de l'urbanisme, avec le plan régional pour la qualité de l'air prévu par l'article L. 222-1 du
+code de l'environnement et, à compter de son adoption, avec le schéma régional du climat, de l'air et de l'énergie prévu par
+l'article L. 222-1 du code de l'environnement. 
 
 Pour les plans de déplacements urbains approuvés avant l'adoption du schéma régional du climat, de l'air et de l'énergie,
 l'obligation de compatibilité mentionnée à l'alinéa précédent s'applique à compter de leur révision.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 28 (VT), alinéa 1, phrase 2
-
-	**Cite**:
-
-	  - Code de l'environnement - art. L222-1 (V)
-
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 6
+
+	**Cite**:
+
+	  - Code de l'environnement - art. L222-1
