--- a/01. PARTIE LEGISLATIVE/Article L1231-1 - 23085805.md
+++ b/01. PARTIE LEGISLATIVE/Article L1231-1 - 23085805.md
@@ -1,14 +1,28 @@
 # Article L1231-1
 
-Les communes, leurs groupements et les syndicats mixtes de transports sont, dans les conditions générales énoncées au présent
-chapitre, les autorités compétentes pour organiser les services réguliers de transports public urbain de personnes. Elles
-peuvent, en outre, organiser des services de transports à la demande.
+Dans les périmètres de transports urbains, les communes, leurs groupements et les syndicats mixtes de transport sont les
+autorités compétentes pour organiser la mobilité. 
+
+Ces autorités sont des autorités organisatrices de transport au sens de l'article L. 1221-1. A ce titre, dans les conditions
+générales énoncées au présent chapitre, elles organisent les services réguliers de transport public urbain de personnes et
+peuvent organiser des services de transport à la demande. 
+
+Elles concourent au développement des modes de déplacement terrestres non motorisés et des usages partagés des véhicules
+terrestres à moteur. 
+
+Afin de réduire la congestion urbaine ainsi que les pollutions et nuisances affectant l'environnement, elles peuvent, en
+outre, en cas d'inadaptation de l'offre privée à cette fin, organiser des services publics de transport de marchandises et de
+logistique urbaine.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°2007-1224 du 21 août 2007 - art. 7 (VT), alinéa 3, phrase 1, sauf ecqc l'Etat, paragraphe II
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 52
 
 	**Cité par**:
 
@@ -46,6 +60,6 @@ peuvent, en outre, organiser des services de transports à la demande.
 	  - Code général des collectivités territoriales - art. L5217-2 (V)
 	  - Code général des collectivités territoriales - art. L5722-7-1 (V)
 
-	**Codifié par**:
+	**Cite**:
 
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Code des transports - art. L1221-1
