--- a/01. PARTIE LEGISLATIVE/Article L3121-4 - 23083924.md
+++ b/01. PARTIE LEGISLATIVE/Article L3121-4 - 23083924.md
@@ -1,7 +1,7 @@
 # Article L3121-4
 
 Les transactions prévues par les articles L. 3121-2 et L. 3121-3 sont répertoriées, avec mention de leur montant, dans un
-registre tenu par l'autorité administrative qui a délivré l'autorisation de stationnement. 
+registre tenu par l'autorité administrative  compétente pour délivrer l'autorisation de stationnement. 
 
 Le nouveau titulaire remet alors à cette autorité les documents justificatifs de l'exploitation effective et continue de
 l'autorisation par son prédécesseur. 
@@ -11,18 +11,18 @@ date de leur conclusion.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°95-66 du 20 janvier 1995 - art. 5 (Ab)
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 66
 
 	**Cite**:
 
-	  - Code des transports - art. L3121-2 (V)
+	  - Code des transports - art. L3121-2
 
 	**Cité par**:
 
 	  - Code des transports - art. R3121-10 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
