--- a/01. PARTIE LEGISLATIVE/Article L6332-2 - 23078104.md
+++ b/01. PARTIE LEGISLATIVE/Article L6332-2 - 23078104.md
@@ -2,14 +2,18 @@
 
 La police des aérodromes et des installations aéronautiques régis par les dispositions du présent chapitre est assurée, sous
 réserve des pouvoirs de l'autorité militaire à l'égard des aérodromes et installations dépendant de la défense nationale, par
-le représentant de l'Etat dans le département qui exerce, à cet effet, dans leur emprise, les pouvoirs impartis au maire par
-l'article L. 2212-2 du code général des collectivités territoriales.
+le représentant de l'Etat dans le département qui exerce, à cet effet, dans leur emprise, les pouvoirs impartis au maire aux
+articles L. 2212-2 et L. 2213-33 du code général des collectivités territoriales. 
 
 Les modalités d'application du présent article, notamment les conditions dans lesquelles le représentant de l'Etat dans le
-département est chargé des pouvoirs mentionnés à cet article lorsque l'emprise de l'aérodrome s'étend sur plusieurs
+département est chargé des pouvoirs mentionnés à ces articles lorsque l'emprise de l'aérodrome s'étend sur plusieurs
 départements sont fixées par décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Cité par**:
 
@@ -27,14 +31,11 @@ départements sont fixées par décret en Conseil d'Etat.
 	  - Code des transports - art. L6773-4-1 (V)
 	  - Code des transports - art. L6783-5 (V)
 
+	**Modifié par**:
+
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 66
+
 	**Cite**:
 
 	  - Code général des collectivités territoriales - art. L2212-2
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L213-2 (VT)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Code général des collectivités territoriales - art. L2213-33
