--- a/01. PARTIE LEGISLATIVE/Article L6773-4-1 - 25424104.md
+++ b/01. PARTIE LEGISLATIVE/Article L6773-4-1 - 25424104.md
@@ -1,18 +1,19 @@
 # Article L6773-4-1
 
 Pour l'application en Polynésie française des dispositions de l'article L. 6332-2, les mots : " dans le département " sont
-remplacés par les mots : " en Polynésie française ", les mots : " par l'article L. 2212-2 du code général des collectivités
-territoriales " sont remplacés par les mots : " en matière de police municipale en Polynésie française " et les mots : "
-notamment les conditions dans lesquelles le représentant de l'Etat dans le département est chargé des pouvoirs mentionnés à
-cet article lorsque l'emprise de l'aérodrome s'étend sur plusieurs départements " sont supprimés.
+remplacés par les mots : " en Polynésie française ", les mots : " aux articles L. 2212-2 et L. 2213-33 du code général des
+collectivités territoriales " sont remplacés par les mots : " en matière de police municipale en Polynésie française " et les
+mots : " notamment les conditions dans lesquelles le représentant de l'Etat dans le département est chargé des pouvoirs
+mentionnés à cet article lorsque l'emprise de l'aérodrome s'étend sur plusieurs départements " sont supprimés.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2012-289 du 1er mars 2012 - art. 10
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 66
 
 	**Cite**:
 
 	  - Code général des collectivités territoriales - art. L2212-2
+	  - Code général des collectivités territoriales - art. L2213-33
 	  - Code des transports - art. L6332-2
