--- a/01. PARTIE LEGISLATIVE/Article L6783-5 - 23077277.md
+++ b/01. PARTIE LEGISLATIVE/Article L6783-5 - 23077277.md
@@ -1,22 +1,23 @@
 # Article L6783-5
 
 Pour l'application à Wallis-et-Futuna de l'article L. 6332-2, les mots : " dans le département " sont remplacés par les
-mots : " à Wallis-et-Futuna ", les mots : " par l'article L. 2212-2 du code général des collectivités territoriales " sont
-remplacés par les mots : " en matière de police municipale à Wallis-et-Futuna " et les mots : " notamment les conditions dans
-lesquelles le représentant de l'Etat dans le département est chargé des pouvoirs mentionnés à cet article lorsque l'emprise
-de l'aérodrome s'étend sur plusieurs départements " sont supprimés.
+mots : " à Wallis-et-Futuna ", les mots : " aux articles L. 2212-2 et L. 2213-33 du code général des collectivités
+territoriales " sont remplacés par les mots : " en matière de police municipale à Wallis-et-Futuna " et les mots : "
+notamment les conditions dans lesquelles le représentant de l'Etat dans le département est chargé des pouvoirs mentionnés à
+cet article lorsque l'emprise de l'aérodrome s'étend sur plusieurs départements " sont supprimés.
 
 **Liens relatifs à cet article**
-
-	**Modifié par**:
-
-	  - Ordonnance n°2012-289 du 1er mars 2012 - art. 11
-
-	**Cite**:
-
-	  - Code général des collectivités territoriales - art. L2212-2
-	  - Code des transports - art. L6332-2
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-58 du 27 janvier 2014 - art. 66
+
+	**Cite**:
+
+	  - Code général des collectivités territoriales - art. L2212-2
+	  - Code général des collectivités territoriales - art. L2213-33
+	  - Code des transports - art. L6332-2
