--- a/01. PARTIE LEGISLATIVE/Article L2351-1 - 23084046.md
+++ b/01. PARTIE LEGISLATIVE/Article L2351-1 - 23084046.md
@@ -1,13 +1,17 @@
 # Article L2351-1
 
-Les articles L. 2151-1 et L. 2151-2 ne sont pas applicables à Saint-Pierre-et-Miquelon.
+Les articles L. 2151-1 à L. 2151-3 ne sont pas applicables à Saint-Pierre-et-Miquelon.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code des transports - art. L2151-1 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-344 du 17 mars 2014 - art. 116
+
+	**Cite**:
+
+	  - Code des transports - art. L2151-1
