--- a/01. PARTIE LEGISLATIVE/Article L3121-11 - 23083905.md
+++ b/01. PARTIE LEGISLATIVE/Article L3121-11 - 23083905.md
@@ -3,19 +3,22 @@
 En attente de clientèle, les taxis sont tenus de stationner dans leur commune de rattachement ou dans une commune faisant
 partie d'un service commun de taxis comprenant leur commune de rattachement. Ils peuvent également stationner dans les
 communes où ils ont fait l'objet d'une réservation préalable dont les conducteurs doivent apporter la preuve en cas de
-contrôle.
+contrôle. Munis d'une réservation préalable, ils ne peuvent stationner à l'abord des gares et des aérogares ou, le cas
+échéant, dans l'enceinte de celles-ci, lorsqu'elles ne sont pas situées dans leur commune de rattachement ou dans une commune
+faisant partie d'un service commun comprenant leur commune de rattachement, au-delà d'une durée précédant la prise en charge
+de leur clientèle. La durée de ce stationnement est fixée par décret.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°95-66 du 20 janvier 1995 - art. 1 bis (Ab)
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Cité par**:
 
 	  - Décret n°95-935 du 17 août 1995 - art. 1-1 (Ab)
 	  - Décret n°2014-371 du 26 mars 2014 - art. 1 (Ab)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Loi n°2014-344 du 17 mars 2014 - art. 135
