--- a/01. PARTIE LEGISLATIVE/Article L3124-4 - 23083864.md
+++ b/01. PARTIE LEGISLATIVE/Article L3124-4 - 23083864.md
@@ -12,24 +12,20 @@ complémentaires suivantes :
 
 2° L'immobilisation, pour une durée d'un an au plus, du véhicule qui a servi à commettre l'infraction ;
 
-3° La confiscation du véhicule qui a servi à commettre l'infraction ;
-
-4° L'interdiction, pour une durée de cinq ans au plus, d'entrer et de séjourner dans l'enceinte d'une ou plusieurs
-infrastructures aéroportuaires ou portuaires, d'une gare ferroviaire ou routière, ou de leurs dépendances, sans y avoir été
-préalablement autorisée par l'autorité de police compétente.
+3° La confiscation du véhicule qui a servi à commettre l'infraction.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°95-66 du 20 janvier 1995 - art. 2 ter (Ab), alinéas 1 à 6
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-344 du 17 mars 2014 - art. 135
 
 	**Cité par**:
 
 	  - Code des transports - art. L3124-5 (V)
 	  - Code des transports - art. L3531-1 (V)
 	  - Code des transports - art. L3541-1 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
