--- a/01. PARTIE LEGISLATIVE/Article L4631-1 - 23082103.md
+++ b/01. PARTIE LEGISLATIVE/Article L4631-1 - 23082103.md
@@ -1,13 +1,19 @@
 # Article L4631-1
 
-Les dispositions de l'article L. 4242-1 et celles du titre Ier du livre III ne sont pas applicables à Saint-Barthélemy.
+Les dispositions des articles L. 4242-1 et L. 4271-2 ainsi que celles du titre Ier du livre III ne sont pas applicables à
+Saint-Barthélemy.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code des transports - art. L4242-1 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-344 du 17 mars 2014 - art. 116
+
+	**Cite**:
+
+	  - Code des transports - art. L4241-1
+	  - Code des transports - art. L4271-2
