--- a/01. PARTIE LEGISLATIVE/Article L4651-1 - 23082016.md
+++ b/01. PARTIE LEGISLATIVE/Article L4651-1 - 23082016.md
@@ -1,15 +1,20 @@
 # Article L4651-1
 
-Les dispositions du titre Ier du livre III et des articles L. 4413-1 et L. 4463-4 ne sont pas applicables à Saint-Pierre-et-
-Miquelon.
+Les dispositions de l'article L. 4271-2, du titre Ier du livre III et des articles L. 4413-1 et L. 4463-4 ne sont pas
+applicables à Saint-Pierre-et-Miquelon.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code des transports - art. L4413-1 (V)
-	  - Code des transports - art. L4463-4 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-344 du 17 mars 2014 - art. 116
+
+	**Cite**:
+
+	  - Code des transports - art. L4271-2
+	  - Code des transports - art. L4413-1
+	  - Code des transports - art. L4463-4
