--- a/01. PARTIE LEGISLATIVE/Article L5734-1 - 23078783.md
+++ b/01. PARTIE LEGISLATIVE/Article L5734-1 - 23078783.md
@@ -1,9 +1,18 @@
 # Article L5734-1
 
-Les dispositions du chapitre Ier du titre III du livre IV de la présente partie ne sont pas applicables à Saint-Barthélemy.
+Les dispositions de l'article L. 5421-13 et du chapitre Ier du titre III du livre IV de la présente partie ne sont pas
+applicables à Saint-Barthélemy.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-344 du 17 mars 2014 - art. 116
+
+	**Cite**:
+
+	  - Code des transports - art. L5421-13
