--- a/01. PARTIE LEGISLATIVE/Article L5754-1 - 23078680.md
+++ b/01. PARTIE LEGISLATIVE/Article L5754-1 - 23078680.md
@@ -1,6 +1,7 @@
 # Article L5754-1
 
-Les dispositions du chapitre Ier du titre III du livre IV ne sont pas applicables à Saint-Pierre-et-Miquelon. 
+Les dispositions de l'article L. 5421-13 et du chapitre Ier du titre III du livre IV ne sont pas applicables à Saint-Pierre-
+et-Miquelon. 
 
 Les articles L. 5431-2 et L. 5431-3 sont applicables aux transports maritimes réguliers publics de personnes pour la desserte
 de ports ou appontements du littoral. 
@@ -11,11 +12,15 @@ partie, les autorités mentionnées aux premier et troisième alinéas du même 
 
 **Liens relatifs à cet article**
 
-	**Cite**:
-
-	  - Code des transports - art. L5431-1 (V)
-	  - Code des transports - art. L5431-2 (V)
-
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-344 du 17 mars 2014 - art. 116
+
+	**Cite**:
+
+	  - Code des transports - art. L5431-1
+	  - Code des transports - art. L5431-2
