--- a/01. PARTIE LEGISLATIVE/Article L5794-1 - 23078534.md
+++ b/01. PARTIE LEGISLATIVE/Article L5794-1 - 23078534.md
@@ -1,10 +1,18 @@
 # Article L5794-1
 
-Les dispositions du livre IV, à l'exception de celles des chapitres Ier, II et III du titre III sont applicables dans les
-Terres australes et antarctiques françaises.
+Les dispositions du livre IV, à l'exception de celles de l'article L. 5421-13 et des chapitres Ier, II et III du titre III
+sont applicables dans les Terres australes et antarctiques françaises.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-344 du 17 mars 2014 - art. 116
+
+	**Cite**:
+
+	  - Code des transports - art. L5421-13
