--- a/01. PARTIE LEGISLATIVE/Article L6754-1 - 23077454.md
+++ b/01. PARTIE LEGISLATIVE/Article L6754-1 - 23077454.md
@@ -1,16 +1,21 @@
 # Article L6754-1
 
 Les dispositions des articles L. 6412-2, L. 6412-3, 
-L. 6412-5 et L. 6421-3 ne sont pas applicables à Saint-Pierre-et-Miquelon.
+L. 6412-5, L. 6421-3 et L. 6432-3 ne sont pas applicables à Saint-Pierre-et-Miquelon.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code des transports - art. L6412-2 (V)
-	  - Code des transports - art. L6412-5 (V)
-	  - Code des transports - art. L6421-3 (V)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-344 du 17 mars 2014 - art. 116
+
+	**Cite**:
+
+	  - Code des transports - art. L6412-2
+	  - Code des transports - art. L6412-5
+	  - Code des transports - art. L6421-3
+	  - Code des transports - art. L6432-3
