--- a/01. PARTIE LEGISLATIVE/Article L3123-2 - 23083882.md
+++ b/01. PARTIE LEGISLATIVE/Article L3123-2 - 23083882.md
@@ -3,24 +3,34 @@
 Les véhicules affectés à l'activité mentionnée à l'article L. 3123-1 ne peuvent ni stationner, ni circuler sur la voie
 publique en quête de clients. 
 
+Ils ne peuvent prendre en charge un client que si leur conducteur peut justifier d'une réservation préalable.
+
 Ils ne peuvent stationner à l'abord des gares et aérogares, dans le respect des règles du code de la route ou des règlements
 édictés par l'autorité compétente, que si leur conducteur peut justifier d'une réservation préalable.
 
+Sous la même condition de réservation préalable, ils ne peuvent stationner à l'abord des gares et des aérogares ou, le cas
+échéant, dans l'enceinte de celles-ci au-delà d'une durée précédant la prise en charge de leur clientèle. La durée de ce
+stationnement est fixée par décret.
+
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°2009-888 du 22 juillet 2009 - art. 5 (Ab), alinéas 3 et 4, paragraphe III
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-344 du 17 mars 2014 - art. 135
 
 	**Cité par**:
 
 	  - Décret n°2014-371 du 26 mars 2014 - art. 1 (Ab)
 	  - Code des transports - art. L3124-9 (Ab)
 
+	**Abrogé par**:
+
+	  - Loi n°2014-1104 du 1er octobre 2014 - art. 10
+
 	**Cite**:
 
-	  - Code des transports - art. L3123-1 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Code des transports - art. L3123-1 (M)
