--- a/01. PARTIE LEGISLATIVE/Article L3551-1 - 23083502.md
+++ b/01. PARTIE LEGISLATIVE/Article L3551-1 - 23083502.md
@@ -1,18 +1,21 @@
 # Article L3551-1
 
-Le chapitre V du titre Ier du livre Ier de la présente partie et le second alinéa de l'article L. 3122-1 ne s'applique pas à
-Saint-Pierre-et-Miquelon.
+Les articles L. 3113-2 et L. 3113-3, le chapitre V du titre Ier du livre Ier de la présente partie, l'article L. 3115-6, le
+second alinéa de l'article L. 3122-1 et les articles L. 3211-2 et L. 3211-3 ne s'appliquent pas à Saint-Pierre-et-Miquelon.
 
 **Liens relatifs à cet article**
-
-	**Modifié par**:
-
-	  - Loi n°2013-431 du 28 mai 2013 - art. 43 (V)
-
-	**Cite**:
-
-	  - Code des transports - art. L3122-1
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-344 du 17 mars 2014 - art. 116
+
+	**Cite**:
+
+	  - Code des transports - art. L3113-2
+	  - Code des transports - art. L3115-6
+	  - Code des transports - art. L3122-1
+	  - Code des transports - art. L3211-2
