--- a/01. PARTIE LEGISLATIVE/Article L5784-1 - 23078572.md
+++ b/01. PARTIE LEGISLATIVE/Article L5784-1 - 23078572.md
@@ -1,9 +1,18 @@
 # Article L5784-1
 
-Les dispositions du livre IV, à l'exception de celles du chapitre Ier du titre III sont applicables à Wallis-et-Futuna.
+Les dispositions du livre IV, à l'exception de celles de l'article L. 5421-13 et du chapitre Ier du titre III sont
+applicables à Wallis-et-Futuna.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-344 du 17 mars 2014 - art. 116
+
+	**Cite**:
+
+	  - Code des transports - art. L5421-13
