--- a/01. PARTIE LEGISLATIVE/Article L6784-1 - 23077252.md
+++ b/01. PARTIE LEGISLATIVE/Article L6784-1 - 23077252.md
@@ -1,10 +1,18 @@
 # Article L6784-1
 
 Les dispositions du livre IV de la présente partie sont applicables à Wallis-et-Futuna, à l'exception de celles des sections
-2 et 3 du chapitre Ier et du chapitre II du titre Ier.
+2 et 3 du chapitre Ier du titre Ier, du chapitre II du même titre et de l'article L. 6432-3.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-344 du 17 mars 2014 - art. 116
+
+	**Cite**:
+
+	  - Code des transports - art. L6432-3
