--- a/01. PARTIE LEGISLATIVE/Article L1802-6 - 23084962.md
+++ b/01. PARTIE LEGISLATIVE/Article L1802-6 - 23084962.md
@@ -17,7 +17,10 @@ président sont exercées par le tribunal de première instance et son présiden
 5° Les références au code du travail sont remplacées par des références au code du travail applicable en Nouvelle-Calédonie ;
 
 6° Les références au code des postes et des communications électroniques et au code de l'urbanisme sont remplacées par des
-références aux textes applicables localement en la matière.
+références aux textes applicables localement en la matière ;
+
+7° Les montants exprimés en euros sont applicables en Nouvelle-Calédonie sous réserve de leur contre-valeur en monnaie
+locale.
 
 **Liens relatifs à cet article**
 
@@ -27,4 +30,4 @@ références aux textes applicables localement en la matière.
 
 	**Modifié par**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 2
+	  - Loi n°2014-742 du 1er juillet 2014 - art. 33
