--- a/01. PARTIE LEGISLATIVE/Article L1802-8 - 23084947.md
+++ b/01. PARTIE LEGISLATIVE/Article L1802-8 - 23084947.md
@@ -17,7 +17,10 @@ président sont exercées par le tribunal de première instance et son présiden
 5° Les références au code du travail sont remplacées par des références à la loi n° 52-1322 du 15 décembre 1952 modifiée
 instituant un code du travail dans les territoires et territoires associés relevant du ministère chargé de l'outre-mer ; 
 
-6° Les références au code de l'urbanisme sont remplacées par des références aux textes applicables localement en la matière.
+6° Les références au code de l'urbanisme sont remplacées par des références aux textes applicables localement en la matière ;
+
+7° Les montants exprimés en euros sont applicables dans les îles Wallis et Futuna sous réserve de leur contre-valeur en
+monnaie locale.
 
 **Liens relatifs à cet article**
 
@@ -31,4 +34,4 @@ instituant un code du travail dans les territoires et territoires associés rele
 
 	**Modifié par**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 2
+	  - Loi n°2014-742 du 1er juillet 2014 - art. 33
