--- a/01. PARTIE LEGISLATIVE/Article L5763-1 - 23078638.md
+++ b/01. PARTIE LEGISLATIVE/Article L5763-1 - 23078638.md
@@ -1,6 +1,9 @@
 # Article L5763-1
 
-Les dispositions des articles L. 5341-11 à L. 5342-6 sont applicables en Nouvelle-Calédonie. 
+Les articles L. 5332-1 à L. 5332-7, L. 5336-1, L. 5336-8, L. 5336-10 et L. 5341-11 à L. 5342-6 sont applicables en Nouvelle-
+Calédonie. 
+
+Pour l'application de l'article L. 5336-8, les mots : " mentionnés à l'article L. 5336-3 " sont supprimés. 
 
 L'article L. 5342-3 s'applique dans sa rédaction antérieure à la loi n° 2013-431 du 28 mai 2013 portant diverses dispositions
 en matière d'infrastructures et de services de transports.
@@ -13,10 +16,14 @@ en matière d'infrastructures et de services de transports.
 
 	**Cite**:
 
-	  - Loi n°2013-431 du 28 mai 2013 (V)
+	  - Loi n°2013-431 du 28 mai 2013
+	  - Code des transports - art. L5332-1
+	  - Code des transports - art. L5336-1
+	  - Code des transports - art. L5336-10
+	  - Code des transports - art. L5336-8
 	  - Code des transports - art. L5341-11
-	  - Code des transports - art. L5342-3 (Ab)
+	  - Code des transports - art. L5342-3
 
 	**Modifié par**:
 
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 30 (V)
+	  - Loi n°2014-742 du 1er juillet 2014 - art. 34
