--- a/01. PARTIE LEGISLATIVE/Article L5774-1 - 23078603.md
+++ b/01. PARTIE LEGISLATIVE/Article L5774-1 - 23078603.md
@@ -1,9 +1,13 @@
 # Article L5774-1
 
-Les dispositions du chapitre IV du titre III du livre IV sont applicables en Polynésie française.
+Le chapitre IV du titre III et le titre IV du livre IV sont applicables en Polynésie française.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-742 du 1er juillet 2014 - art. 35
