--- a/01. PARTIE LEGISLATIVE/Article L1802-7 - 23084955.md
+++ b/01. PARTIE LEGISLATIVE/Article L1802-7 - 23084955.md
@@ -18,7 +18,10 @@ président sont exercées par le tribunal de première instance et son présiden
 Polynésie française ;
 
 6° Les références au code de l'urbanisme et au code du commerce sont remplacées par des références aux textes applicables
-localement en la matière.
+localement en la matière ;
+
+7° Les montants exprimés en euros sont applicables en Polynésie française sous réserve de leur contre-valeur en monnaie
+locale.
 
 **Liens relatifs à cet article**
 
@@ -28,4 +31,4 @@ localement en la matière.
 
 	**Modifié par**:
 
-	  - Ordonnance n°2011-204 du 24 février 2011 - art. 2
+	  - Loi n°2014-742 du 1er juillet 2014 - art. 33
