--- a/01. PARTIE LEGISLATIVE/Article L5783-1 - 23078576.md
+++ b/01. PARTIE LEGISLATIVE/Article L5783-1 - 23078576.md
@@ -1,5 +1,9 @@
 # Article L5783-1
 
+Les articles L. 5332-1 à L. 5332-7, L. 5336-1, L. 5336-8 et L. 5336-10 sont applicables à Wallis-et-Futuna. 
+
+Pour l'application de l'article L. 5336-8, les mots : " mentionnés à l'article L. 5336-3 " sont supprimés. 
+
 L'article L. 5342-3 s'applique dans sa rédaction antérieure à la loi n° 2013-431 du 28 mai 2013 portant diverses dispositions
 en matière d'infrastructures et de services de transports.
 
@@ -9,11 +13,14 @@ en matière d'infrastructures et de services de transports.
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
-	**Cite**:
-
-	  - Loi n°2013-431 du 28 mai 2013 (V)
-	  - Code des transports - art. L5342-3 (Ab)
-
 	**Modifié par**:
 
-	  - Loi n°2013-619 du 16 juillet 2013 - art. 30 (V)
+	  - Loi n°2014-742 du 1er juillet 2014 - art. 34
+
+	**Cite**:
+
+	  - Code des transports - art. L5332-1
+	  - Code des transports - art. L5336-1
+	  - Code des transports - art. L5336-10
+	  - Code des transports - art. L5336-3 (V)
+	  - Code des transports - art. L5336-8
