--- a/01. PARTIE LEGISLATIVE/Article L2132-4 - 23084513.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-4 - 23084513.md
@@ -1,23 +1,19 @@
 # Article L2132-4
 
-Le président de l'Autorité de régulation des activités ferroviaires et les six autres membres sont nommés par décret.
-
 En cas de vacance de la présidence de l'Autorité de régulation des activités ferroviaires pour quelque cause que ce soit ou
 en cas d'empêchement constaté par le collège, les fonctions du président sont provisoirement exercées par le doyen d'âge du
 collège.
 
 Le président a qualité pour agir en justice au nom de l'autorité.
 
-Pour la constitution du collège, le président est nommé pour six ans.
-
 A l'exception du président, les membres du collège sont renouvelés par tiers tous les deux ans.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 12 (Ab), alinéas 2 (phrase 1), 3, 4 et 7 du paragraphe I, et alinéa 8 (phrase 1) du paragraphe II
-
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
