--- a/01. PARTIE LEGISLATIVE/Article L2132-5 - 23084511.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-5 - 23084511.md
@@ -1,22 +1,22 @@
 # Article L2132-5
 
-Le président de l'Autorité de régulation des activités ferroviaires exerce cette fonction à plein temps. Sa fonction est
-incompatible avec toute activité professionnelle, tout mandat électif départemental, régional, national ou européen, avec
-tout emploi public et toute détention, directe ou indirecte, d'intérêts dans une entreprise du secteur du transport
-ferroviaire.
+Le président de l'Autorité de régulation des activités ferroviaires et ses deux vice-présidents exercent leurs fonctions à
+plein temps. Leurs fonctions sont incompatibles avec toute activité professionnelle, avec tout mandat électif départemental,
+régional, national ou européen, avec tout emploi public et avec toute détention, directe ou indirecte, d'intérêts dans le
+secteur ferroviaire.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 13 (Ab), alinéa 1
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-872 du 4 août 2014 - art. 13 (VD)
 
 	**Cité par**:
 
 	  - Code des transports - art. L1264-7 (V)
 	  - Code des transports - art. L2331-1 (M)
 	  - Code des transports - art. L2341-1 (M)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
