--- a/01. PARTIE LEGISLATIVE/Article L2132-7 - 23084505.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-7 - 23084505.md
@@ -1,11 +1,11 @@
 # Article L2132-7
 
-Trois des membres autres que le président sont désignés respectivement par le président de l'Assemblée nationale, le
-président du Sénat et le président du Conseil économique, social et environnemental.
+Les deux vice-présidents sont désignés, respectivement, par le président de l'Assemblée nationale et le président du Sénat. 
 
-La durée du mandat des membres désignés par les présidents des assemblées parlementaires et du Conseil économique, social et
-environnemental est fixée, par tirage au sort, à deux, quatre et six ans. La durée du mandat des trois autres membres est
-fixée par tirage au sort à deux, quatre et six ans.
+Le collège comprend au moins un membre nommé en raison de ses compétences économiques, un membre nommé en raison de ses
+compétences juridiques et un membre nommé en raison de ses compétences techniques dans le domaine ferroviaire ou pour son
+expertise en matière de concurrence, notamment dans le domaine des industries de réseau. La composition du collège assure une
+représentation équilibrée entre les femmes et les hommes. 
 
 En cas de vacance d'un siège de membre du collège, il est procédé à son remplacement pour la durée du mandat restant à
 courir. Un mandat exercé pendant moins de deux ans n'est pas pris en compte pour l'application de la règle de non-
@@ -13,14 +13,14 @@ renouvellement.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 12 (Ab), alinéas 2 (phrase 2) et 5, paragraphe I, et alinéa 8 (phrases 2 et 3), paragraphe II
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - Loi n°2014-872 du 4 août 2014 - art. 13
 
 	**Cité par**:
 
 	  - Code des transports - art. L1264-7 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
