--- a/01. PARTIE LEGISLATIVE/Article L2132-8 - 23084503.md
+++ b/01. PARTIE LEGISLATIVE/Article L2132-8 - 23084503.md
@@ -1,33 +1,38 @@
 # Article L2132-8
 
-Les fonctions des autres membres du collège sont incompatibles avec tout mandat électif départemental, régional, national ou
-européen et toute détention, directe ou indirecte, d'intérêts dans une entreprise du secteur du transport ferroviaire.
+Les fonctions des membres du collège autres que celles de président ou de vice-président sont incompatibles avec tout mandat
+électif départemental, régional, national ou européen, et avec toute détention, directe et indirecte, d'intérêts dans le
+secteur ferroviaire. 
 
 Les membres du collège ne prennent, à titre personnel, aucune position publique sur des sujets relevant de la compétence de
-l'autorité.
+l'autorité. 
 
 Sans préjudice de la possibilité, pour tout membre du collège, de se déporter dans toute affaire dans laquelle il
-l'estimerait nécessaire, aucun membre ne peut délibérer dans une affaire dans laquelle il a ou a eu un intérêt au cours des
-trois années précédant la délibération ; cette interdiction s'applique également lorsque, au cours de la même période, un
-membre a détenu un mandat ou exercé des fonctions de direction, de conseil ou de contrôle au sein d'une personne morale ayant
-eu intérêt à cette affaire.
+l'estimerait nécessaire, aucun membre ne peut délibérer dans une affaire dans laquelle il a eu un intérêt au cours des trois
+années précédant la délibération ; cette interdiction s'applique également lorsque, au cours de la même période, un membre a
+détenu un mandat ou exercé des fonctions de direction, de conseil ou de contrôle au sein d'une personne morale ayant eu
+intérêt à cette affaire. 
 
-Les membres du collège ne sont pas révocables, sous réserve des dispositions suivantes :
+Les membres du collège ne sont pas révocables, sous réserve des dispositions suivantes : 
 
 1° Tout membre qui ne respecte pas les règles d'incompatibilité prévues au présent article est déclaré, après consultation du
-collège, démissionnaire d'office par décret ;
+collège, démissionnaire d'office par décret ; 
 
 2° Il peut être mis fin aux fonctions d'un membre en cas d'empêchement constaté par le collège, dans les conditions prévues
-par le règlement intérieur de l'autorité ;
+par le règlement intérieur de l'autorité ; 
 
 3° Il peut également être mis fin aux fonctions d'un membre en cas de manquement grave à ses obligations, par décret pris sur
-proposition du collège.
+proposition du collège. 
+
+Au terme de leur mandat, les membres du collège ne peuvent occuper aucune position professionnelle ni exercer aucune
+responsabilité au sein d'aucune des entreprises ou entités entrant dans le champ de la régulation pendant une période
+minimale de trois ans, sous peine des sanctions prévues à l'article 432-13 du code pénal.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°2009-1503 du 8 décembre 2009 - art. 13 (Ab), alinéas 2 à 8
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Cité par**:
 
@@ -36,6 +41,10 @@ proposition du collège.
 	  - Code des transports - art. L2331-1 (M)
 	  - Code des transports - art. L2341-1 (M)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Loi n°2014-872 du 4 août 2014 - art. 13
+
+	**Cite**:
+
+	  - Code pénal - art. 432-13 (V)
