--- a/01. PARTIE LEGISLATIVE/Article L6411-9 - 23077843.md
+++ b/01. PARTIE LEGISLATIVE/Article L6411-9 - 23077843.md
@@ -1,9 +1,10 @@
 # Article L6411-9
 
-Le conseil d'administration ou, selon le cas, le conseil de surveillance de la société Air France peut compter jusqu'à six
-membres élus par les salariés dans les conditions prévues, selon le cas, par les articles L. 225-27 à L. 225-34 ou les
-articles L. 225-79 et L. 225-80 du code de commerce. Pour l'élection de ces membres, les statuts peuvent prévoir que les
-salariés sont répartis entre quatre collèges comprenant respectivement : 
+Nonobstant les dispositions de l'ordonnance n° 2014-948 du 20 août 2014 relative à la gouvernance et aux opérations sur le
+capital des sociétés à participation publique, le conseil d'administration ou, selon le cas, le conseil de surveillance de la
+société Air France peut compter jusqu'à six membres élus par les salariés dans les conditions prévues, selon le cas, par les
+articles L. 225-27 à L. 225-34 ou les articles L. 225-79 et L. 225-80 du code de commerce. Pour l'élection de ces membres,
+les statuts peuvent prévoir que les salariés sont répartis entre quatre collèges comprenant respectivement : 
 
 1° Le personnel navigant technique ; 
 
@@ -24,19 +25,28 @@ En cas d'opération donnant lieu à l'apport de tout ou partie de l'actif de la 
 titulaire d'une licence d'exploitation de transporteur aérien, dont elle détient la majorité du capital social et des droits
 de vote, les dispositions du premier alinéa du présent article sont applicables à la société bénéficiaire des apports.
 
+**Nota:**
+
+Conformément à l'article 34 I de l'ordonnance n° 2014-948 du 20 août 2014, le conseil d'administration, le conseil de
+surveillance ou l'organe délibérant en tenant lieu des sociétés mentionnées à l'article 1er fixe la date d'application des
+dispositions du titre II de la présente ordonnance, à l'exception de celles des articles 17 et 21. Cette date ne peut être
+postérieure au lendemain de la première assemblée générale ordinaire qui suit le 1er janvier 2017. Jusqu'à cette date, les
+présentes dispositions restent applicables dans leur rédaction antérieure à l'entrée en vigueur de la présente ordonnance.
+
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Code de commerce - art. L225-23 (V)
-	  - Code de commerce - art. L225-27 (VT)
-	  - Code de commerce - art. L225-71
-	  - Code de commerce - art. L225-79
-
-	**Anciens textes**:
-
-	  - Code de l'aviation civile - art. L342-3 (Ab)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Cite**:
+
+	  - ORDONNANCE n°2014-948 du 20 août 2014
+	  - Code de commerce - art. L225-23
+	  - Code de commerce - art. L225-27
+	  - Code de commerce - art. L225-71
+	  - Code de commerce - art. L225-79
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2014-948 du 20 août 2014 - art. 37
