--- a/02. PARTIE REGLEMENTAIRE/Article D1252-3 - 28996636.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1252-3 - 28996636.md
@@ -27,7 +27,7 @@ représentant ;
 
 12° Le chef de la mission de la sûreté nucléaire et de la radioprotection ou son représentant ;
 
-13° Le directeur général de la compétitivité, de l'industrie et des services ou son représentant ;
+13° Le directeur général des entreprises ou son représentant ;
 
 14° Le directeur général des douanes et droits indirects ou son représentant ;
 
@@ -59,14 +59,6 @@ dangereuses est renouvelée pour une durée de cinq ans à compter du 8 juin 201
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Décret n°95-1029 du 13 septembre 1995 - art. 2, alinéas 3 à 24 (Ab)
-
-	**Codifié par**:
-
-	  - Décret n°2014-530 du 22 mai 2014 - art.
-
-	**Créé par**:
-
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2014-1048 du 15 septembre 2014 - art. 4
