--- a/01. PARTIE LEGISLATIVE/Article L1112-3 - 23086459.md
+++ b/01. PARTIE LEGISLATIVE/Article L1112-3 - 23086459.md
@@ -3,7 +3,19 @@
 Tout matériel roulant acquis lors d'un renouvellement de matériel ou à l'occasion de l'extension des réseaux est accessible
 aux personnes handicapées ou à mobilité réduite.
 
+Le matériel roulant routier, guidé et ferroviaire en service le 13 février 2015 peut être exploité après cette date.
+Toutefois, une proportion minimale de matériel roulant affecté aux services réguliers et à la demande de transport public
+routier de voyageurs doit être accessible sur chaque service. Cette proportion et sa progression sont déterminées par décret
+en fonction du matériel roulant utilisé et du type de services de transport collectif de voyageurs. Le matériel roulant
+routier accessible est affecté en priorité aux lignes les plus fréquentées.
+
+Les règles relatives au matériel roulant des services de transport scolaire sont fixées à l'article L. 3111-7-1.
+
 **Liens relatifs à cet article**
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Cité par**:
 
@@ -16,10 +28,6 @@ aux personnes handicapées ou à mobilité réduite.
 	  - Code des transports - art. L1221-4 (V)
 	  - Code des transports - art. R3111-39 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°2005-102 du 11 février 2005 - art. 45 (M), alinéa 10, phrase 1, paragraphe II
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - ORDONNANCE n°2014-1090 du 26 septembre 2014 - art. 6
