--- a/01. PARTIE LEGISLATIVE/Article L1112-1 - 23086466.md
+++ b/01. PARTIE LEGISLATIVE/Article L1112-1 - 23086466.md
@@ -5,11 +5,22 @@ services de transport collectif sont rendus accessibles aux personnes handicapé
 conformément aux dispositions du premier alinéa de l'article L. 114-4 du code de l'action sociale et des familles, avant le
 13 février 2015.
 
+L'accessibilité du service de transport est assurée par l'aménagement des points d'arrêt prioritaires compte tenu de leur
+fréquentation, des modalités de leur exploitation, de l'organisation des réseaux de transport et des nécessités de desserte
+suffisante du territoire. Ces critères sont précisés par décret.
+
+Les dispositions relatives à la mise en accessibilité des points d'arrêt du service de transport scolaire sont fixées à
+l'article L. 3111-7-1.
+
+Les bâtiments et installations recevant du public faisant partie des gares ferroviaires considérées comme des points d'arrêt
+non prioritaires et pour lesquelles des mesures de substitution pour l'accès des personnes handicapées sont mises en place ne
+sont pas soumis aux dispositions du troisième alinéa de l'article L. 111-7-3 du code de la construction et de l'habitation.
+
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°2005-102 du 11 février 2005 - art. 45 (M), alinéa 2, paragraphe I
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Cité par**:
 
@@ -22,14 +33,16 @@ conformément aux dispositions du premier alinéa de l'article L. 114-4 du code 
 	  - Code des transports - art. D1112-9 (V)
 	  - Code des transports - art. L1112-10 (VD)
 	  - Code des transports - art. L1112-2-1 (V)
+	  - Code des transports - art. L1112-4 (V)
 	  - Code des transports - art. L1112-5 (VD)
 	  - Code des transports - art. L1821-1-1 (V)
 	  - Code des transports - art. L2133-7 (VD)
 
+	**Modifié par**:
+
+	  - ORDONNANCE n°2014-1090 du 26 septembre 2014 - art. 6
+
 	**Cite**:
 
-	  - Code de l'action sociale et des familles - art. L114-4 (V)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Code de l'action sociale et des familles - art. L114-4
+	  - Code de la construction et de l'habitation. - art. L111-7-3
