--- a/01. PARTIE LEGISLATIVE/Article L1112-4 - 23086455.md
+++ b/01. PARTIE LEGISLATIVE/Article L1112-4 - 23086455.md
@@ -1,17 +1,20 @@
 # Article L1112-4
 
-Lorsque la mise en accessibilité des réseaux existants s'avère techniquement impossible, des moyens de transport adaptés aux
-besoins des personnes handicapées ou dont la mobilité est réduite sont mis à leur disposition. L'autorité organisatrice de
-transport compétente dispose d'un délai de trois ans pour organiser et financer ces moyens de transport.
+Lorsque, dans un réseau existant, la mise en accessibilité d'un arrêt identifié comme prioritaire au sens de l'article L.
+1112-1 s'avère techniquement impossible en raison d'un obstacle impossible à surmonter sauf à procéder à des aménagements
+d'un coût manifestement disproportionné, des moyens de transport adaptés aux besoins des personnes handicapées ou dont la
+mobilité est réduite sont mis à leur disposition. L'autorité organisatrice de transport compétente dispose d'un délai de dix-
+huit mois à compter de la validation de l'impossibilité technique par l'autorité administrative pour organiser et financer
+ces moyens de transport. 
 
 Le coût de ces transports de substitution pour les usagers handicapés ne doit pas être supérieur au coût du transport public
 existant.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°2005-102 du 11 février 2005 - art. 45 (M), alinéa 5, paragraphe I
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Cité par**:
 
@@ -23,6 +26,10 @@ existant.
 	  - Code des transports - art. R1112-13 (V)
 	  - Code des transports - art. R1112-16 (V)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - ORDONNANCE n°2014-1090 du 26 septembre 2014 - art. 6
+
+	**Cite**:
+
+	  - Code des transports - art. L1112-1 (V)
