--- a/01. PARTIE LEGISLATIVE/Article L1112-7 - 23086440.md
+++ b/01. PARTIE LEGISLATIVE/Article L1112-7 - 23086440.md
@@ -1,18 +1,18 @@
 # Article L1112-7
 
-L'autorité organisatrice de transport public met en place une procédure de dépôt de plainte concernant les obstacles à la
-libre circulation des personnes à mobilité réduite.
+L'autorité organisatrice de transport public met en place une procédure de signalement  concernant les obstacles à la libre
+circulation des personnes à mobilité réduite.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°2005-102 du 11 février 2005 - art. 45 (M), alinéa 7, paragraphe I
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Cité par**:
 
 	  - Loi n°2014-789 du 10 juillet 2014 - art. 2 (V)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - ORDONNANCE n°2014-1090 du 26 septembre 2014 - art. 6
