--- a/01. PARTIE LEGISLATIVE/Article L1221-10 - 23085911.md
+++ b/01. PARTIE LEGISLATIVE/Article L1221-10 - 23085911.md
@@ -1,17 +1,25 @@
 # Article L1221-10
 
-Les régies de transports sont créées par délibération de l'autorité organisatrice.
+Les régies de transports sont créées par délibération de l'autorité organisatrice. 
+
+Chaque année, l'autorité organisatrice de transport délibère sur les conditions dans lesquelles la régie met en œuvre
+l'obligation d'accessibilité du service public, notamment en ce qui concerne la mise en service de matériel roulant
+accessible prévue à l'article L. 1112-3.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°85-891 du 16 août 1985 - art. 12 (VT), alinéa 2, phrase 2
-
-	**Cité par**:
-
-	  - Code des transports - art. R1221-1-1 (VD)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2014-1090 du 26 septembre 2014 - art. 8
+
+	**Cite**:
+
+	  - Code des transports - art. L1112-3
+
+	**Cité par**:
+
+	  - Code des transports - art. R1221-1-1 (VD)
