--- a/01. PARTIE LEGISLATIVE/Article L1221-4 - 23085935.md
+++ b/01. PARTIE LEGISLATIVE/Article L1221-4 - 23085935.md
@@ -4,14 +4,27 @@ La convention à durée déterminée mentionnée à l'article L. 1221-3 fixe la 
 fonctionnement et de financement du service. Elle définit les actions à entreprendre par l'une et par l'autre partie afin de
 favoriser l'exercice effectif du droit au transports et de promouvoir le transports public de personnes. 
 
+Elle précise le pourcentage de matériel roulant accessible affecté aux services réguliers et à la demande de transport public
+routier de voyageurs mis en œuvre au moment de la passation de la convention et, le cas échant, la progression de ce
+pourcentage pendant la durée de celle-ci en application du deuxième alinéa de l'article L. 1112-3. Elle prévoit des pénalités
+pour non-respect des obligations prévues par le premier alinéa de l'article L. 1112-3. 
+
+Quand l'autorité organisatrice de transport est une collectivité territoriale, elle délibère chaque année sur les conditions
+d'exécution, par le titulaire, du service public en matière d'accessibilité. Elle examine, le cas échéant, les pénalités
+appliquées pour non-respect des obligations de la convention en matière d'accessibilité. 
+
 Cette convention est résiliée de plein droit, en cas de radiation de l'entreprise du registre mentionné à l'article L.
 1421-1.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 7 (VT), alinéa 3, phrases 3 à 5, paragraphe II
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2014-1090 du 26 septembre 2014 - art. 8
 
 	**Cité par**:
 
@@ -20,9 +33,6 @@ Cette convention est résiliée de plein droit, en cas de radiation de l'entrepr
 
 	**Cite**:
 
-	  - Code des transports - art. L1221-3 (VD)
-	  - Code des transports - art. L1421-1 (VD)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+	  - Code des transports - art. L1112-3
+	  - Code des transports - art. L1221-3
+	  - Code des transports - art. L1421-1
