--- a/01. PARTIE LEGISLATIVE/Article L1821-1 - 23084890.md
+++ b/01. PARTIE LEGISLATIVE/Article L1821-1 - 23084890.md
@@ -1,10 +1,14 @@
 # Article L1821-1
 
-Les chapitres II et III du titre Ier du livre Ier, les titres II et III du livre III de la présente partie ne sont pas
-applicables à Mayotte.
+Le chapitre III du titre Ier du livre Ier, les titres II et III du livre III de la présente partie ne sont pas applicables à
+Mayotte.
 
 **Liens relatifs à cet article**
 
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2014-1090 du 26 septembre 2014 - art. 15
