--- a/01. PARTIE LEGISLATIVE/Article L1831-1 - 23084866.md
+++ b/01. PARTIE LEGISLATIVE/Article L1831-1 - 23084866.md
@@ -1,7 +1,7 @@
 # Article L1831-1
 
-Les dispositions de la section 2 du chapitre II et du chapitre IV du titre Ier ainsi que des titres II et III du livre II ne
-sont pas applicables à Saint-Barthélemy.
+Les dispositions        du chapitre IV du titre Ier ainsi que des titres II et III du livre II ne sont pas applicables à
+Saint-Barthélemy. 
 
 Les autres dispositions de la présente partie, à l'exception de celles du livre III, du titre III du livre IV, des titres II
 et III du livre VI et du livre VII, ne sont pas applicables à Saint-Barthélemy en tant qu'elles concernent les transports
@@ -12,3 +12,7 @@ routiers.
 	**Codifié par**:
 
 	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
+
+	**Modifié par**:
+
+	  - ORDONNANCE n°2014-1090 du 26 septembre 2014 - art. 16
